<resources>

    <!--Splash Screen-->
    <string name="app_name">Grassias</string>
    <string name="app_name_txt">GRASSIAS</string>
    <string name="splash_sub_title">A word used instead of \'gracias\' (thank you) in appreciation for being passed marijuana.</string>


    <!--Login Screen-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_email">Email</string>
    <string name="get_started">Get Started</string>
    <string name="create_account">Create Account</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="logging_in_msg">Logging in...</string>
    <string name="Logging_Out">Logging out...</string>


    <!--Signup Screen-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="company_email">parker@kushmarketing.us</string>
    <string name="phone_no">Phone Number</string>
    <string name="next">NEXT</string>
    <string name="signup_phone_msg">We use your phone number to send you confirmations and requests regarding your account and will NOT be shared with third parties.</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_user_name">Invalid user name</string>
    <string name="invalid_email">Invalid email Address</string>
    <string name="invalid_phone_no">Invalid phone no</string>
    <string name="loading_dispensaries">Finding near by dispensaries ...</string>
    <string name="searching_dispensaries">Searching dispensaries ...</string>

    <!--Dispensary Screen-->
    <string name="title_activity_dispensary">Dispensaries</string>
    <string name="title_activity_discover">Discover</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="select_dispensary">Select your nearby dispensary first</string>
    <string name="signing_up_msg">Processing signing up ...</string>

    <!--Extras-->
    <string name="no_internet_msg">No active internet connection</string>
    <string name="no_permission_msg">Permission needed to perform this task</string>
    <string name="something_went_wrong_ry_again">Something went wrong. Try again</string>
    <string name="successfully_sign_up">User registered.</string>

    <!--Deal-->
    <string name="getting_users">Getting deals...</string>

    <!--Rewards-->
    <string name="getting_Rewards">Getting rewards...</string>
    <string name="no_offer_ava">No offer available.</string>
    <string name="processing">Processing please wait....</string>

    <!--Swipe deleted row-->

    <string name="action_deleted">Deleted</string>
</resources>
