<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseColor"
    tools:context="com.ilsa.grassis.activites.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/login_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srcCompat="@mipmap/flower" />

                    <com.ilsa.grassis.library.BoldTextView
                        android:id="@+id/login_txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:letterSpacing=".2"
                        android:text="@string/app_name_txt"
                        android:textColor="@color/white"
                        android:textSize="@dimen/splash_title" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_edge_rectangle_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="64px"
                        android:layout_height="64px"
                        android:layout_gravity="center"
                        app:srcCompat="@mipmap/login_username_icon" />

                    <com.ilsa.grassis.library.CustomEditText
                        android:id="@+id/login_et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:gravity="center|left"
                        android:hint="@string/username"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/login_input" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_edge_rectangle_white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <ImageView
                        android:layout_width="64px"
                        android:layout_height="64px"
                        android:layout_gravity="center"
                        app:srcCompat="@mipmap/login_password_icon" />

                    <com.ilsa.grassis.library.CustomEditText
                        android:id="@+id/login_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:gravity="center|left"
                        android:hint="@string/password"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/login_input" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_edge_rectangle_base">

                <com.ilsa.grassis.library.RegularTextView
                    android:id="@+id/login_txt_get_started"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/get_started"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/login_input" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.ilsa.grassis.library.RegularTextView
                        android:id="@+id/login_txt_skip_now"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/skip_for_now"
                        android:textColor="@color/white"
                        android:textSize="@dimen/login_input" />

                    <com.ilsa.grassis.library.RegularTextView
                        android:id="@+id/login_txt_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="center"
                        android:maxLines="1"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/login_input" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
