<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activites.EditProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/editToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:theme="@style/ToolbarColoredBackArrow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_180sdp"
                android:background="@color/white">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image_profile"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/capture_img" />

                <ImageView
                    android:id="@+id/userEdit_Profile_Image"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_alignBottom="@+id/user_image_profile"
                    android:layout_alignEnd="@+id/user_image_profile"
                    android:layout_alignRight="@+id/user_image_profile"
                    android:src="@drawable/add" />

                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                <!--android:id="@+id/user_image_profile"-->
                <!--android:layout_width="@dimen/_100sdp"-->
                <!--android:layout_height="@dimen/_100sdp"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_centerVertical="true"-->
                <!--android:src="@mipmap/capture_img"-->
                <!--android:visibility="visible" />-->
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/profile_Edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_13sdp"
                    android:textColor="@color/lightGrey"
                    android:textColorHint="@color/lightGrey"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lightGrey" />

                <EditText
                    android:id="@+id/profile_Edt_LastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_13sdp"
                    android:textColor="@color/lightGrey"
                    android:textColorHint="@color/lightGrey"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lightGrey" />

                <EditText
                    android:id="@+id/profile_Edt_UserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:textColor="@color/lightGrey"
                    android:textColorHint="@color/lightGrey"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lightGrey" />

                <EditText
                    android:id="@+id/profile_Edt_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/company_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:textColor="@color/lightGrey"
                    android:textColorHint="@color/lightGrey"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lightGrey" />

                <EditText
                    android:id="@+id/profile_Edt_PhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:hint="@string/phone_no"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:textColor="@color/lightGrey"
                    android:textColorHint="@color/lightGrey"
                    android:textCursorDrawable="@color/black"
                    android:textSize="@dimen/_16sdp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/lightGrey" />

            </LinearLayout>


            <Button
                android:id="@+id/activity_log_in_SaveButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_14sdp"
                android:layout_marginRight="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/round_shape_btn"
                android:text="Update Profile"
                android:textColor="#FFFF"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
